--- a/src/RiftRunBundle/Resources/config/routing.yml
+++ b/src/RiftRunBundle/Resources/config/routing.yml
@@ -4,3 +4,6 @@ rift_run_wizards:
 rift_run_posts:
     type: rest
     resource: RiftRunBundle\Controller\PostsController
+rift_run_search:
+    type: rest
+    resource: RiftRunBundle\Controller\SearchController
