SearchQuery and repository query.

--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
@@ -7,11 +7,13 @@ RiftRunBundle\Model\SearchQuery:
             joinColumn:
                 name: gametype_id
                 referencedColumnName: id
+            fetch: EAGER
             cascade: [ persist ]
     oneToMany:
         characterType:
             targetEntity: CharacterType
             mappedBy: searchQuery
+            fetch: EAGER
             cascade: [ persist ]
     repositoryClass: RiftRunBundle\ORM\Repository\SearchQueryRepository
     id:
