GET behat tests fix. Fixtures now use constructors.

--- a/test/Fixtures/DatabaseSeeder/Character/template.yml
+++ b/test/Fixtures/DatabaseSeeder/Character/template.yml
@@ -1,9 +1,11 @@
+parameters:
+    paragonPoints: <numberBetween($min = 70, $max = 1000)>
+    battleTag: "#11111"
+    region: "EU"
+    type: "demon hunter"
+    seasonal: false
+    gameType: "softcore"
+    createdAt: <dateTime($max = 'now')>
 RiftRunBundle\Model\Character:
     character (template):
-        paragonPoints: <numberBetween($min = 70, $max = 1000)>
-        battleTag: "#11111"
-        region: "EU"
-        type: "dh"
-        seasonal: false
-        gameType: "softcore"
-        createdAt: <dateTime($max = 'now')>
+        __construct: false
