--- a/test/Fixtures/DatabaseSeeder/CharacterType/template.yml
+++ b/test/Fixtures/DatabaseSeeder/CharacterType/template.yml
@@ -1,3 +1,6 @@
+parameters:
+    type: "demon hunter"
+
 RiftRunBundle\Model\CharacterType:
     charactertype (template):
-        type: 'dh'
+        __construct: false
