--- a/test/Fixtures/DatabaseSeeder/SearchQuery/template.yml
+++ b/test/Fixtures/DatabaseSeeder/SearchQuery/template.yml
@@ -1,4 +1,7 @@
+parameters:
+    minParagon: <numberBetween($min = 70, $max = 1000)>
+    createdAt: <dateTime($max = 'now')>
+
 RiftRunBundle\Model\SearchQuery:
     searchquery (template):
-        minParagon: <numberBetween($min = 70, $max = 1000)>
-        createdAt: <dateTime($max = 'now')>
+        __construct: false
