--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "3.0.1",
-        "doctrine/orm": "2.6.x-dev",
+        "doctrine/orm": "dev-master",
         "doctrine/doctrine-bundle": "dev-master",
         "doctrine/doctrine-cache-bundle": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
