--- a/test/Fixtures/DatabaseSeeder/GameType/grift_template.yml
+++ b/test/Fixtures/DatabaseSeeder/GameType/grift_template.yml
@@ -1,3 +1,6 @@
+parameters:
+    level: '40+'
+
 RiftRunBundle\Model\Grift:
     grift (template):
-        level: '40+'
+        __construct: false
