--- a/test/Fixtures/DatabaseSeeder/Post/template.yml
+++ b/test/Fixtures/DatabaseSeeder/Post/template.yml
@@ -1,3 +1,3 @@
 RiftRunBundle\Model\Post:
     post (template):
-        createdAt: <dateTimeBetween($startDate = '-26 days', $now = 'now')>
+        __construct: false
