Refreshed the build.

--- a/composer.json
+++ b/composer.json
@@ -52,10 +52,10 @@
         "fzaninotto/faker": "^1.4",
         "hautelook/alice-bundle": "dev-master",
 	    "phpunit/phpunit-mock-objects": "dev-master",
-        "behat/web-api-extension": "dev-master",
 	    "ralfmaxxx/behat_multidimensional_extension": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "sebastian/object-enumerator": "dev-master"
+        "sebastian/object-enumerator": "dev-master",
+        "phpunit/php-code-coverage": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
