--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,7 +70,7 @@ doctrine:
 
 # FOS Rest Configuration
 sensio_framework_extra:
-    view:       { annotations: false }
+    view:       { annotations: true }
     router:     { annotations: true}
 
 fos_rest:
