--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Character.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Character.orm.yml
@@ -4,10 +4,12 @@ RiftRunBundle\Model\Character:
     table: characters
     id:
         id:
-            type: integer
+            type: uuid
             id: true
             generator:
-                strategy: AUTO
+                strategy: CUSTOM
+            customIdGenerator:
+                class: Ramsey\Uuid\Doctrine\UuidGenerator
     fields:
         type:
             type: string
