--- a/src/RiftRunBundle/Resources/config/validation/CharacterDTO.yml
+++ b/src/RiftRunBundle/Resources/config/validation/CharacterDTO.yml
@@ -5,6 +5,7 @@ RiftRunBundle\DTO\CharacterDTO:
             - NotNull: ~
             - Choice:
                 choices: ["demon hunter", "monk", "wizard", "witch doctor", "barbarian"]
+                message: "Wrong value"
         paragonPoints:
             - NotBlank: ~
             - NotNull: ~
