--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/CharacterType.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/CharacterType.orm.yml
@@ -11,10 +11,12 @@ RiftRunBundle\Model\CharacterType:
                 referencedColumnName: id
     id:
         id:
-            type: integer
+            type: uuid
             id: true
             generator:
-                strategy: AUTO
+                strategy: CUSTOM
+            customIdGenerator:
+                class: Ramsey\Uuid\Doctrine\UuidGenerator
     fields:
         type:
             type: string
