--- a/fa/package.json
+++ b/fa/package.json
@@ -19,16 +19,36 @@
     "gulp": "^3.9.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^3.3.1",
-    "gulp-typescript": "^2.10.0",
-    "tslint": "^2.5.1"
+    "gulp-typescript": "^2.13.4",
+    "tslint": "^2.5.1",
+    "typings": "^0.8.1"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.0",
-    "systemjs": "0.19.6",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.10"
+    "@angular/common": "^2.0.0-rc.1",
+    "@angular/compiler": "^2.0.0-rc.1",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/http": "^2.0.0-rc.1",
+    "@angular/platform-browser": "^2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "@angular/router": "^2.0.0-rc.1",
+    "@angular/router-deprecated":  "2.0.0-rc.1",
+    "@angular2-material/button": "^2.0.0-alpha.4",
+    "@angular2-material/core": "^2.0.0-alpha.4",
+    "@angular2-material/input": "^2.0.0-alpha.4",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.4",
+    "@angular2-material/toolbar": "^2.0.0-alpha.4",
+    "@angular/upgrade":  "2.0.0-rc.1",
+    "angular2-jwt": "^0.1.15",
+    "cors": "2.7.1",
+    "es6-promise": "3.1.2",
+    "es6-shim": "^0.35.0",
+    "express": "4.13.4",
+    "express-jwt": "3.3.0",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "^5.0.0-beta.6",
+    "symbol-observable": "^0.2.4",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12",
+    "angular2-in-memory-web-api": "0.0.7"
   }
 }
