--- a/fa/tsconfig.json
+++ b/fa/tsconfig.json
@@ -12,6 +12,8 @@
   "exclude": [
     "node_modules",
     "typings/main",
-    "typings/main.d.ts"
+    "typings/main.d.ts",
+    "typings/browser",
+    "typings/browser.d.ts"
   ]
 }
