Fixed displaying uuid objects.

--- a/src/RiftRunBundle/Resources/config/serializer/Character.yml
+++ b/src/RiftRunBundle/Resources/config/serializer/Character.yml
@@ -1,5 +1,7 @@
 RiftRunBundle\Model\Character:
     properties:
+        id:
+            type: string
         battleTag:
             serialized_name: battleTag
         paragonPoints:
