--- a/src/RiftRunBundle/Resources/config/serializer/Post.yml
+++ b/src/RiftRunBundle/Resources/config/serializer/Post.yml
@@ -1,5 +1,7 @@
 RiftRunBundle\Model\Post:
     properties:
+        id:
+            type: string
         createdAt:
             serialized_name: createdAt
     relations:
