Added nelmio cors bundle to allow angular app query back end api.

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
 	    "simple-bus/doctrine-orm-bridge": "dev-master",
         "league/tactician-bundle": "^0.4.0",
         "league/tactician-command-events": "^0.6.0",
-        "ramsey/uuid-doctrine": "^1.2"
+        "ramsey/uuid-doctrine": "^1.2",
+        "nelmio/cors-bundle": "^1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "dev-master",
