--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -108,7 +108,7 @@ bazinga_hateoas:
     metadata:
         cache:                file
         file_cache:
-            dir:              %kernel.cache_dir%/hateoas
+            dir:              "%kernel.cache_dir%/hateoas"
 
 # doctrine_orm_bridge:
 #     entity_manager: riftrun
@@ -118,3 +118,28 @@ tactician:
         default:
             middleware:
                 - tactician.middleware.command_handler
+
+nelmio_cors:
+        defaults:
+            allow_credentials: false
+            allow_origin: []
+            allow_headers: []
+            allow_methods: []
+            expose_headers: []
+            max_age: 0
+            hosts: []
+            origin_regex: false
+        paths:
+            '^/v1/':
+                allow_origin: ['*']
+                #allow_origin: ['^http://localhost:[0-9]+', '^http://fa.local', '^http://fa.local/', '^http://riftrun.local+']
+                #allow_headers: ['X-Custom-Auth']
+                allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+                max_age: 3600
+#            '^/':
+#                origin_regex: true
+#                allow_origin: ['^http://localhost:[0-9]+']
+#                allow_headers: ['X-Custom-Auth']
+#                allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+#                max_age: 3600
+#                hosts: ['^api\.']
