--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -134,7 +134,7 @@ nelmio_cors:
                 allow_origin: ['*']
                 #allow_origin: ['^http://localhost:[0-9]+', '^http://fa.local', '^http://fa.local/', '^http://riftrun.local+']
                 #allow_headers: ['X-Custom-Auth']
-                allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS']
+                allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
                 max_age: 3600
 #            '^/':
 #                origin_regex: true
