--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -133,7 +133,7 @@ nelmio_cors:
             '^/v1/':
                 allow_origin: ['*']
                 #allow_origin: ['^http://localhost:[0-9]+', '^http://fa.local', '^http://fa.local/', '^http://riftrun.local+']
-                #allow_headers: ['X-Custom-Auth']
+                allow_headers: ['Content-Type']
                 allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
                 max_age: 3600
 #            '^/':
