Added Rift type.

--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/GameType.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/GameType.orm.yml
@@ -9,6 +9,7 @@ RiftRunBundle\Model\GameType:
     discriminatorMap:
         gametype: GameType
         grift: Grift
+        rift: Rift
     cascade: [ persist ]
     id:
             id:
