--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "league/tactician-bundle": "^0.4.0",
         "league/tactician-command-events": "^0.6.0",
         "ramsey/uuid-doctrine": "^1.2",
-        "nelmio/cors-bundle": "^1.4"
+        "nelmio/cors-bundle": "^1.4",
+        "league/pipeline": "^0.2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "dev-master",
