--- a/src/RiftRunBundle/Resources/config/services.yml
+++ b/src/RiftRunBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 parameters:
     configured_pipelines:
-        processFormPipe: RiftRunBundle\CommandBus\Pipelines\ProcessFormPipe
-        transformDTOPipe: RiftRunBundle\CommandBus\Pipelines\TransformDTOPipe
+          processFormPipe: 'RiftRunBundle\CommandBus\Pipelines\ProcessFormPipe'
+          transformDTOPipe: 'RiftRunBundle\CommandBus\Pipelines\TransformDTOPipe'
 
 services:
     pagerfanta_factory_library:
@@ -18,6 +18,8 @@ services:
         arguments:
             - '@league_pipeline_builder'
             - '%configured_pipelines%'
+        calls:
+            - [ setContainer, [ '@service_container' ] ]
 
     create_post_command_handler:
         class: RiftRunBundle\CommandBus\Handlers\CreatePostCommandHandler
