--- a/deployment/php/Dockerfile
+++ b/deployment/php/Dockerfile
@@ -1,5 +1,5 @@
 # use the latest Ubuntu base image
-FROM ubuntu:15.10
+FROM ubuntu:16.04
 
 RUN echo "CACHE BUST"
 RUN apt-get update
@@ -9,11 +9,11 @@ RUN apt-get update
 RUN add-apt-repository ppa:ondrej/php -y
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y 
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get -y --force-yes install php-cli php php-fpm php-curl php-json php-mysql php7.0-opcache php-pgsql php-sqlite3 php7.0-dev wget
-ADD php.ini /etc/php/7.0/fpm/
+RUN DEBIAN_FRONTEND=noninteractive apt-get -y --force-yes install php7.1-cli php7.1 php7.1-fpm php7.1-curl php7.1-json php7.1-mysql php7.1-opcache php7.1-pgsql php7.1-sqlite3 php7.1-dev wget php7.1-xml
+ADD php.ini /etc/php/7.1/fpm/
  
-ADD php-fpm.conf /etc/php/7.0/fpm/
-ADD www.conf  /etc/php/7.0/fpm/pool.d/
+ADD php-fpm.conf /etc/php/7.1/fpm/
+ADD www.conf  /etc/php/7.1/fpm/pool.d/
 #ADD 20-xdebug.ini /etc/php/7.0/cli/conf.d/
 #ADD 20-xdebug.ini /etc/php/7.0/fpm/conf.d/
 #RUN ln -s /etc/php7/conf.d/opcache.ini /etc/php7/cli/conf.d/opcache.ini
@@ -26,4 +26,4 @@ ADD www.conf  /etc/php/7.0/fpm/pool.d/
 #RUN ./configure --prefix=/usr
 #RUN make && make install
 #WORKDIR /var/www/html/riftrun/
-CMD bash -c "/usr/sbin/php-fpm7.0 --fpm-config /etc/php/7.0/fpm/php-fpm.conf && tail -F /var/log/php7-fpm.log"
+CMD bash -c "/usr/sbin/php-fpm7.1 --fpm-config /etc/php/7.1/fpm/php-fpm.conf && tail -F /var/log/php7-fpm.log"
