--- a/fa/package.json
+++ b/fa/package.json
@@ -24,22 +24,13 @@
     "typings": "^0.8.1"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.3",
-    "@angular/compiler": "^2.0.0-rc.3",
-    "@angular/core": "^2.0.0-rc.3",
-    "@angular/http": "^2.0.0-rc.3",
-    "@angular/platform-browser": "^2.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
-    "@angular/router": "3.0.0-alpha.8",
-    "@angular2-material/button": "^2.0.0-alpha.6",
-    "@angular2-material/core": "^2.0.0-alpha.6",
-    "@angular2-material/input": "^2.0.0-alpha.6",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.6",
-    "@angular2-material/toolbar": "^2.0.0-alpha.6",
-    "@angular2-material/card": "^2.0.0-alpha.6",
-    "@angular2-material/list": "^2.0.0-alpha.6",
-    "@angular/upgrade":  "2.0.0-rc.3",
-    "@angular/forms": "^0.1.0",
+    "@angular/common": "^2.0.0-rc.4",
+    "@angular/compiler": "^2.0.0-rc.4",
+    "@angular/core": "^2.0.0-rc.4",
+    "@angular/http": "^2.0.0-rc.4",
+    "@angular/platform-browser": "^2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.2",
     "angular2-jwt": "^0.1.15",
     "cors": "2.7.1",
     "es6-promise": "3.1.2",
@@ -50,7 +41,7 @@
     "rxjs": "^5.0.0-beta.6",
     "symbol-observable": "^0.2.4",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.12",
+    "zone.js": "~0.6.12",
     "angular2-in-memory-web-api": "0.0.7"
   }
 }
