--- a/fa/package.json
+++ b/fa/package.json
@@ -30,15 +30,13 @@
     "@angular/http": "^2.0.0-rc.4",
     "@angular/platform-browser": "^2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
     "@angular/router": "3.0.0-beta.2",
-    "angular2-jwt": "^0.1.15",
     "cors": "2.7.1",
     "es6-promise": "3.1.2",
     "es6-shim": "^0.35.0",
-    "express": "4.13.4",
-    "express-jwt": "3.3.0",
     "reflect-metadata": "0.1.3",
-    "rxjs": "^5.0.0-beta.6",
+    "rxjs": "^5.0.0-beta.10",
     "symbol-observable": "^0.2.4",
     "systemjs": "0.19.27",
     "zone.js": "~0.6.12",
