--- a/fa/package.json
+++ b/fa/package.json
@@ -32,6 +32,13 @@
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "@angular/forms": "0.2.0",
     "@angular/router": "3.0.0-beta.2",
+    "@angular2-material/button": "2.0.0-alpha.6",
+    "@angular2-material/card": "2.0.0-alpha.6",
+    "@angular2-material/checkbox": "2.0.0-alpha.6",
+    "@angular2-material/core": "2.0.0-alpha.6",
+    "@angular2-material/input": "2.0.0-alpha.6",
+    "@angular2-material/progress-circle": "2.0.0-alpha.6",
+    "@angular2-material/toolbar": "2.0.0-alpha.6",
     "cors": "2.7.1",
     "es6-promise": "3.1.2",
     "es6-shim": "^0.35.0",
