--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -2,8 +2,6 @@ webserver:
   build: nginx
   hostname: riftrun.local
   links:
-#    - sql
-#    - redis
     - phpfpm
   expose:
     - "80"
@@ -12,36 +10,15 @@ webserver:
     - "80:80"
     - "443:443"
   volumes:
-    - /home/agnieszka/Code/RiftRun:/var/www/html/riftrun
-    - /home/agnieszka/Code/RiftRun/fa:/var/www/html/fa
+    - ../.:/var/www/html/riftrun
+    - ../fa:/var/www/html/fa
 phpfpm:
   build: php
   volumes:
-    - /home/agnieszka/Code/RiftRun:/var/www/html/riftrun
+    - ../.:/var/www/html/riftrun
   environment:
     XDEBUG_CONFIG: remote_host=172.17.42.1
   ports:
     - "9001:9001"
   expose:
     - "9001"
-#  links:
-#    - sql
-#    - redis
-#sql:
-#   image: wiliamsouza/docker-mysql
-#   expose:
-#     - "3306"
-#   ports:
-#     - "3306:3306"
-#   volumes:
-#     - /home/agnieszka/dockerizor/capi/resources/docker/mysql/log:/var/log/mysql
-#     - /home/agnieszka/dockerizor/capi/resources/docker/mysql/lib:/var/lib/mysql
-#     - /home/agnieszka/dockerizor/capi/resources/docker/mysql/conf.d:/etc/mysql/conf.d
-#   environment:
-#     - MYSQL_ROOT_PASSWORD=adminuser
-#redis:
-#  build: resources/docker/redis
-#  ports:
-#    - "6379:6379"
-#  expose:
-#   - "6379"
