Fixing tests continues.

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     "require-dev": {
         "sensio/generator-bundle": "dev-master",
 	    "sebastian/resource-operations": "dev-master",
-        "phpunit/phpunit": "dev-master",
+        "phpunit/phpunit": "5.7.x-dev",
 	    "behat/behat": "dev-master",
         "phpspec/phpspec": "dev-master",
 	    "phpspec/prophecy": "dev-master",
@@ -54,13 +54,13 @@
         "behat/mink-browserkit-driver": "dev-master",
         "behat/mink": "dev-master",
         "fzaninotto/faker": "^1.4",
-        "hautelook/alice-bundle": "dev-master",
         "nelmio/alice": "dev-master",
 	    "phpunit/phpunit-mock-objects": "dev-master",
 	    "ralfmaxxx/behat_multidimensional_extension": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "sebastian/object-enumerator": "dev-master",
-        "phpunit/php-code-coverage": "dev-master"
+        "phpunit/php-code-coverage": "dev-master",
+        "theofidry/alice-data-fixtures": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
