--- a/test/Fixtures/DatabaseSeeder/Post/post_x10.yml
+++ b/test/Fixtures/DatabaseSeeder/Post/post_x10.yml
@@ -6,8 +6,8 @@ include:
     - ../SearchQuery/template.yml
 
 RiftRunBundle\Model\Character:
-    monks{1..10} (extends character):
-        __construct: ['monk', <{paragonPoints}>, <{battleTag}>, <{region}>, <{seasonal}>, <{gameType}>, <{createdAt}>]
+    monks{1..10} (extends character): []
+#        __construct: ['monk', <{paragonPoints}>, <{battleTag}>, <{region}>, <{seasonal}>, <{gameType}>, <{createdAt}>]
 
 RiftRunBundle\Model\CharacterType:
     charactertypes{1..10} (extends charactertype):
@@ -20,7 +20,8 @@ RiftRunBundle\Model\Grift:
 
 RiftRunBundle\Model\SearchQuery:
     searchqueries{1..10} (extends searchquery):
-        __construct: [<{minParagon}>, '@grifts<current()>', <{createdAt}>]
+        __construct: ['<numberBetween(70, 1000)>', '@grifts<current()>', '<dateTime("now")>']
+#        __construct: [<{minParagon}>, '@grifts<current()>', <{createdAt}>]
 
 RiftRunBundle\Model\Post:
     posts{1..10} (extends post):
