--- a/test/Fixtures/DatabaseSeeder/Post/posts_29_old_x10.yml
+++ b/test/Fixtures/DatabaseSeeder/Post/posts_29_old_x10.yml
@@ -6,8 +6,8 @@ include:
     - ../SearchQuery/template.yml
 
 RiftRunBundle\Model\Character:
-    monks{1..10} (extends character):
-        __construct: ['monk', <{paragonPoints}>, <{battleTag}>, <{region}>, <{seasonal}>, <{gameType}>, <{createdAt}>]
+    monks{1..10} (extends character): []
+#        __construct: ['monk', <{paragonPoints}>, <{battleTag}>, <{region}>, <{seasonal}>, <{gameType}>, <{createdAt}>]
 
 RiftRunBundle\Model\Grift:
     grifts{1..10} (extends grift):
@@ -15,7 +15,8 @@ RiftRunBundle\Model\Grift:
 
 RiftRunBundle\Model\SearchQuery:
     searchqueries{1..10} (extends searchquery):
-        __construct: [<{minParagon}>, '@grifts<current()>', <{createdAt}>]
+        __construct: ['<numberBetween(70, 1000)>', '@grifts<current()>', '<dateTime("now")>']
+#        __construct: [<{minParagon}>, '@grifts<current()>', <{createdAt}>]
 
 RiftRunBundle\Model\CharacterType:
     charactertypes{1..10} (extends charactertype):
@@ -23,4 +24,4 @@ RiftRunBundle\Model\CharacterType:
 
 RiftRunBundle\Model\Post:
     posts{1..10} (extends post):
-        __construct: ['@monks<current()>', '@searchqueries<current()>', "<dateTimeBetween($startDate = '-29 days', $now = '-27 days')>"]
+        __construct: ['@monks<current()>', '@searchqueries<current()>', "<dateTimeBetween('-29 days', '-27 days')>"]
