--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -52,10 +52,9 @@ doctrine:
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         # naming_strategy: doctrine.orm.naming_strategy.underscore
-        default_entity_manager: riftrun
-
+        default_entity_manager: default
         entity_managers:
-            riftrun:
+            default:
                 connection: riftrun
                 mappings:
                     RiftRunBundle:
